[package]
name = "m_core"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = { version = "2.5"}

zeroize = { version = "1.7", features = ["derive", "alloc"] }

rand = "0.9.2"

pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

aes-gcm = "0.10"

sha3 = "0.10"
blake3 = "1.8.2"

[features]
default = ["std"]
std = []
constant-time = []

[dev-dependencies]
hex = "0.4"
paste = "1.0"
