[package]
name = "m_core"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = { version = "2.5"}

flexi_logger = "0.31.8"
log = "0.4"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }

thiserror = "2.0.18"

rand = "0.9.2"

pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

aes-gcm = "0.10"

sha3 = "0.10"
blake3 = "1.8.2"

zstd = "0.13"

[features]
default = ["std"]
std = []
insecure_log = []

[dev-dependencies]
hex = "0.4"
paste = "1.0"
tempfile = "3.8"
serial_test = "3.0"
